--- a/MLProject/requirements.txt
+++ b/MLProject/requirements.txt
@@ -1,7 +1,7 @@
-joblib==1.5.2
-matplotlib==3.10.7
-mlflow==2.19.0
-numpy
-pandas==2.3.3
-scikit-learn==1.7.2
-seaborn==0.13.2
+mlflow>=2.10.0
+pandas>=1.5.0
+numpy>=1.23.0
+scikit-learn>=1.2.0
+matplotlib>=3.6.0
+joblib>=1.3.0
+docker>=6.1.0
