--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run MLflow Project (Retraining)
         run: |
-          mlflow run ./MLProject --env-manager=local
+          mlflow run ./MLProject
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
