--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,9 @@ jobs:
 
       - name: Run MLflow Project (Retraining)
         env:
-          MLFLOW_TRACKING_URI: sqlite:///mlflow.db
+          MLFLOW_TRACKING_URI: file:./mlruns
         run: |
           mlflow run ./MLProject --env-manager=local
-
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
