--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,17 @@ jobs:
 
       - name: Run MLflow Project (Retraining)
         env:
-          MLFLOW_TRACKING_URI: file:./mlruns
+          MLFLOW_TRACKING_URI: file:${{ github.workspace }}/mlruns
         run: |
           mlflow run ./MLProject --env-manager=local
+
+      - name: Upload Artifacts to GitHub
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: mlruns-artifacts
+          path: mlruns/
+
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
